--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -9,16 +9,43 @@
     <title>Calculator</title>
 </head>
 <body>
-    <h1>계산기</h1>
-    <div class="cal">
-        <div class="display"></div>
-        <div class="button">
-            <button class="top_pad">AC</button>
-            <button class="top_pad">+/-</button>
-            <button class="top_pad">%</button>
+    <div class="container">
+        <h1>계산기</h1>
+        <div class="cal">
+            <div class="display">000</div>
+            <div class="button">
+                <div class="button__row">
+                    <button class="top_pad">AC</button>
+                    <button class="top_pad">+/-</button>
+                    <button class="top_pad">%</button>
+                </div>
+                <div class="button__row">
+                    <button class="right_pad">÷</button>
+                    <button class="num_pad">7</button>
+                    <button class="num_pad">8</button>
+                    <button class="num_pad">9</button>
+                </div>
+                <div class="button__row">
+                    <button class="right_pad">x</button>
+                    <button class="num_pad">4</button>
+                    <button class="num_pad">5</button>
+                    <button class="num_pad">6</button>
+                    <button class="right_pad">-</button>
+                </div>
+                <div class="button__row">
+                    <button class="num_pad">1</button>
+                    <button class="num_pad">2</button>
+                    <button class="num_pad">3</button>
+                    <button class="right_pad">+</button>
+                </div>
+                <div class="button__row">
+                    <button class="zero_pad">0</button>
+                    <button class="num_pad">.</button>
+                    <button class="right_pad">=</button>
+                </div>
+            </div>
         </div>
-
-    </div>
+    </div>  
 
 </body>
 </html>
