--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -12,23 +12,23 @@
     <div class="container">
         <input type="text" value="000" disabled>
         <div class="button">
-            <button class="ac">AC</button>            
-            <button>&divide;</button>
+            <button class="ac" data-type="ac">AC</button>            
+            <button data-type="operator">&divide;</button>
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>&times;</button>
+            <button data-type="operator">&times;</button>
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button>-</button>
+            <button data-type="operator">-</button>
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button>+</button>
+            <button data-type="operator">+</button>
             <button class="zero">0</button>            
             <button>.</button>
-            <button>=</button>
+            <button data-type="equals">=</button>
         </div>
     </div>  
 
