--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <input type="text" value="000" disabled>
+        <input type="text">
         <div class="button">
             <button class="ac" data-type="ac">AC</button>            
             <button data-type="operator">&divide;</button>
