Add : calculator 마무리, clock

--- a/clock/clock.html
+++ b/clock/clock.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="clock.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="clockContainer">
+            <video class="clockVideo"height="800px"src="video/clock_video.mp4" autoplay muted>
+                <div>00:00:00</div>
+            </video>
+    </div>
 </body>
 </html>
